moves Apps in Apps module as submodules