@@ -2,6 +2,7 @@ package Utilities.CyclicListIterator;
 
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -9,7 +10,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 public class ListHasOneElement {
 
     private Object object = new Object();
-    private List<Object> list = List.of(object);
+    private List<Object> list = Arrays.asList(object);
     private CyclicListIterator<Object> sut = new CyclicListIterator<>(list);
 
     @Test
