@@ -2,6 +2,7 @@ package Utilities.CyclicListIterator;
 
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -10,7 +11,7 @@ public class ListHasTwoElements {
 
     private Object first = new Object();
     private Object second = new Object();
-    private List<Object> list = List.of(first, second);
+    private List<Object> list = Arrays.asList(first, second);
     private CyclicListIterator<Object> sut = new CyclicListIterator<>(list);
 
     @Test
